fix: Tooltip flicker issue; feat: Minor touch-ups to admin controls tooltips

--- a/src/app/components/admin-controls/admin-controls.component.scss
+++ b/src/app/components/admin-controls/admin-controls.component.scss
@@ -48,11 +48,7 @@
   }
 }
 
-.tooltip-content {
-  max-width: 150px;
-
-  .tooltip-item-name {
-    display: block;
-    color: var(--lcc-color--tooltip-highlightedText) !important;
-  }
+.tooltip-item-name {
+  display: block;
+  color: var(--lcc-color--tooltip-highlightedText) !important;
 }
