--- a/src/app/components/tooltip/tooltip.component.scss
+++ b/src/app/components/tooltip/tooltip.component.scss
@@ -1,4 +1,5 @@
 :host {
+  max-width: 150px;
   background-color: var(--lcc-color--tooltip-background);
   color: var(--lcc-color--tooltip-text);
   outline: 1px solid var(--lcc-color--tooltip-border);
